# mri_dwi_cluni

./: .pre-commit-config.yaml  README.md  pyproject.toml
config/: bids_dcm2bids_config_template.json  config.json
mri_dwi_cluni/: bids_conversion.py  interface.ui  main.py  main_white_matter_bundle.py  preprocessing.py  processing_fod.py  processing_tractseg.py  useful.py
